[DEV] Added cup_deploy support
* Added cup_path inventory variable
* Increased command timeout to 10 mins
* Updated Sample Playbook with update, custom_deploy and cup_deploy
* Removed unmount_iso_path inventory variable

--- a/playbooks/sample/playbook.yml
+++ b/playbooks/sample/playbook.yml
@@ -63,3 +63,30 @@
     - name: Get SEL Output
       debug:
         msg: "{{ output.stdout_lines }}"
+
+    - name: Update SUP
+      sdptool:
+        action: "update"
+      register: output
+
+    - name: Update Output
+      debug:
+        msg: "{{ output.stdout_lines }}"
+
+    - name: Custom Deploy
+      sdptool:
+        action: "custom_deploy"
+      register: output
+
+    - name: Custom Deploy Output
+      debug:
+        msg: "{{ output.stdout_lines }}"
+
+    - name: CUP Deploy
+      sdptool:
+        action: "cup_deploy"
+      register: output
+
+    - name: CUP Deploy Output
+      debug:
+        msg: "{{ output.stdout_lines }}"
